made regex symbols bigger, fixed alignment?

--- a/client/css/styles.less
+++ b/client/css/styles.less
@@ -26,8 +26,8 @@ h5 {
 }
 
 img {
-    height: 7.5vw;
-    width: 7.5vw;
+    height: 6.9vw;
+    width: 6.9vw;
     margin: 0;
     padding: 0;
 }
